syntax = "proto3";

option go_package = "proto/accommodation";

import "google/api/annotations.proto";

service AccommodationService {
  rpc GetAllAccommodations(AM_GetAllAccommodations_Request) returns (AM_GetAllAccommodations_Response) {
    option (google.api.http) = {
      get: "/accommodation"
    };
  }
  rpc GetMyAccommodations(AM_GetMyAccommodations_Request) returns (AM_GetMyAccommodations_Response) {
    option (google.api.http) = {
      get: "/accommodation/me"
    };
  }
  rpc CreateAccommodation(AM_CreateAccommodation_Request) returns (AM_CreateAccommodation_Response) {
    option (google.api.http) = {
      post: "/accommodation"
      body: "*"
    };
  }
  rpc GetAccommodation(AM_GetAccommodation_Request) returns (AM_GetAccommodation_Response) {
    option (google.api.http) = {
      get: "/accommodation/details/{id}"
    };
  }
  rpc GetAllPeriodsByAccommodation(AM_GetAllPeriodsByAccommodation_Request) returns (AM_GetAllPeriodsByAccommodation_Response) {
    option (google.api.http) = {
      get: "/accommodation/period/{accommodationId}"
    };
  }
  rpc CreatePeriod(AM_CreatePeriod_Request) returns (AM_CreatePeriod_Response) {
    option (google.api.http) = {
      post: "/accommodation/period",
      body: "*"
    };
  }
  rpc SearchAccommodations(AM_SearchAccommodations_Request) returns (AM_SearchAccommodations_Response) {
    option (google.api.http) = {
      post: "/accommodation/search",
      body: "*"
    };
  }

  rpc GetAllDiscountsByAccommodation(AM_GetAllDiscountsByAccommodation_Request) returns (AM_GetAllDiscountsByAccommodation_Response) {
    option (google.api.http) = {
      get: "/accommodation/discount/{accommodationId}"
    };
  }
  rpc GetAllDiscountsByAccommodationAndInterval(AM_GetAllDiscountsByAccommodationAndInterval_Request) returns (AM_GetAllDiscountsByAccommodationAndInterval_Response) {
    option (google.api.http) = {
      get: "/accommodation/discount/interval/{accommodationId}"
    };
  }
  rpc CreateDiscount(AM_CreateDiscount_Request) returns (AM_CreateDiscount_Response) {
    option (google.api.http) = {
      post: "/accommodation/discount",
      body: "*"
    };
  }
  rpc GetAutomaticReservationValue(AM_GetAutomaticReservation_Request) returns (AM_GetAutomaticReservation_Response) {
    option (google.api.http) = {
      post: "/accommodation/automatic-reservation",
      body: "*"
    };
  }

  rpc GetHostIdByAccommodationId(AM_GetAllDiscountsByAccommodation_Request) returns (AM_GetHostIdByAccommodationId_Response) {
    option (google.api.http) = {
      get: "/accommodation/host/{accommodationId}"
    };
  }
}

//Accommodations

message AM_GetAllAccommodations_Request {
  string range = 1;
  string benefits = 2;
  string distinguished = 3;
}

message AM_GetAllAccommodations_Response {
  repeated AccommodationDTO data = 1;
}

message AM_GetMyAccommodations_Request {}

message AM_GetMyAccommodations_Response {
  repeated AccommodationDTO data = 1;
}

message AM_CreateAccommodation_Request {
  string name = 1;
  string benefits = 2;
  string location = 3;
  int32 minGuests = 4;
  int32 maxGuests = 5;
  int32 automaticReservation = 6;
  double basePrice = 7;
}

message AM_CreateAccommodation_Response {
  string id = 1;
}

message AM_GetAccommodation_Request {
  string id = 1;
}

message AM_GetAccommodation_Response {
  string id = 1;
  string name = 2;
  string benefits = 3;
  string location = 4;
  int32 minGuests = 5;
  int32 maxGuests = 6;
  int32 automaticReservation = 7;
  double basePrice = 8;
  repeated PeriodDTO periods = 9;
  repeated DiscountDTO discounts = 10;
}

message AM_GetAutomaticReservation_Request {
  string id = 1;
}

message AM_GetAutomaticReservation_Response {
  int32 automaticReservation = 1;
}

//Periods

message AM_GetAllPeriodsByAccommodation_Request {
  string accommodationId = 1;
}

message AM_GetAllPeriodsByAccommodation_Response {
  repeated PeriodDTO data = 1;
}

message AM_CreatePeriod_Request {
  string start = 1;
  string end = 2;
  string accommodationId = 3;
  string userId = 4;
  int32 guests = 5;
}

message AM_CreatePeriod_Response {
  string id = 1;
}

message AM_SearchAccommodations_Request {
  string start = 1;
  string end =  2;
  string location = 3;
  int32 numberOfGuests = 4;
}

message AM_SearchAccommodations_Response {
  repeated AccommodationSearchResultDTO data = 1;
}

message AM_GetHostIdByAccommodationId_Response {
  string id = 1;
}

//Discounts

message AM_GetAllDiscountsByAccommodation_Request {
  string accommodationId = 1;
}

message AM_GetAllDiscountsByAccommodation_Response {
  repeated DiscountDTO data = 1;
}

message AM_GetAllDiscountsByAccommodationAndInterval_Request {
  string accommodationId = 1;
  string start = 2;
  string end = 3;
  string userId = 4;
}

message AM_GetAllDiscountsByAccommodationAndInterval_Response {
  repeated DiscountDTO data = 1;
}

message AM_CreateDiscount_Request {
  string start = 1;
  string end = 2;
  string accommodationId = 3;
  string userId = 4;
  double discount = 5;
}

message AM_CreateDiscount_Response {
  string id = 1;
}

//Models

message AccommodationDTO {
  string id = 1;
  string name = 2;
  string benefits = 3;
  string location = 4;
  int32 minGuests = 5;
  int32 maxGuests = 6;
  int32 automaticReservation = 7;
  double basePrice = 8;
  repeated AccommodationRatingDTO ratings = 9;
}

message AccommodationRatingDTO {
  string id = 1;
  string userId = 2;
  uint32 value = 3;
}

message PeriodDTO {
  string id = 1;
  string start = 2;
  string end = 3;
  string accommodationId = 4;
  string userId = 5;
}

message AccommodationSearchResultDTO {
  string id = 1;
  string name = 2;
  string benefits = 3;
  string location = 4;
  int32 minGuests = 5;
  int32 maxGuests = 6;
  int32 automaticReservation = 7;
  double basePrice = 8;
  double totalPrice = 9;
}

message DiscountDTO {
  string id = 1;
  string start = 2;
  string end = 3;
  string accommodationId = 4;
  string userId = 5;
  double discount = 6;
}